# toolkit-data-contracts

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: CODEBASE_MAP.md
docs/audits/: DATA_CONTRACTS_FULL_AUDIT_2026-04-04.md  TOOLKIT_DATA_CONTRACTS_AUDIT_REPORT_2026-03-09.md
examples/: ml_pipeline_example.py
src/toolkit_data_contracts_drift/: cli.py  config.py  contract.py  io.py  monitoring.py  observability.py  types.py
src/toolkit_data_contracts_drift/control_plane/: __init__.py  config.py  contracts.py  tool_specs.py
tests/: test_cli_metrics_logging.py  test_config.py  test_contracts.py  test_control_plane.py  test_drift_edge_cases.py  test_enhancements.py  test_monitoring.py  test_observability.py  test_profile_cli.py  test_schema_validation_edge_cases.py  test_sprint1_cli_flags.py
