[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-data-contracts-drift"
version = "0.1.0"
description = "Data Contracts & Drift: schema contracts, validation, and drift checks for ML/LLM inputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Toolkit Contributors" }]
keywords = ["data", "schema", "contracts", "drift", "ml", "llm", "quality"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AKIVA-AI/toolkit-data-contracts"
Repository = "https://github.com/AKIVA-AI/toolkit-data-contracts"
Documentation = "https://github.com/AKIVA-AI/toolkit-data-contracts#readme"
"Bug Tracker" = "https://github.com/AKIVA-AI/toolkit-data-contracts/issues"

[project.scripts]
toolkit-contracts = "toolkit_data_contracts_drift.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["toolkit_data_contracts_drift"]
omit = ["*/toolkit_data_contracts_drift/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["toolkit_data_contracts_drift"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toolkit_data_contracts_drift = ["py.typed"]
